Initial tracker collector component using htmx

--- a/src/MyRouteTracker.Web/Views/TrackerView/Details.cshtml
+++ b/src/MyRouteTracker.Web/Views/TrackerView/Details.cshtml
@@ -10,7 +10,11 @@
 }
 else
 {
-    <div class="text-center">
-        <h1 class="display-4">Tracker Details - @Model.Id</h1>
+    <div class="">
+        <h1 class="display-6">Tracker Details</h1>
+        <p class="lead">
+            <span class="me-5">@Model.Name</span>
+            <span>@Model.Mode</span>
+        </p>
     </div>
 }
