--- a/src/MyRouteTracker.Web/Views/Tracker/List.cshtml
+++ b/src/MyRouteTracker.Web/Views/Tracker/List.cshtml
@@ -8,7 +8,7 @@
     <h1 class="display-6">Captured Routes</h1>
 </div>
 <div>
-    <a class="btn btn-link" role="button" asp-controller="Tracker" asp-action="New">
+    <a class="btn btn-link" role="button" asp-controller="TrackerView" asp-action="Start">
         <i class="bi bi-plus"></i> Start route
     </a>
 </div>
@@ -27,7 +27,11 @@
                 <td><a asp-controller="TrackerView" asp-action="Details" asp-route-trackerId="@app.Id">@app.Name</a>
                 </td>
                 <td>@app.Mode</td>
-                <td><a class="btn btn-link" href="#" role="button">Delete</a></td>
+                <td>
+                    <a class="btn btn-link" href="#" role="button">Delete</a>
+                    <a class="btn btn-link" hx-get hx-controller="TrackerView" hx-action="Start"
+                        hx-route-trackerId="@app.Id" hx-target="#collector-wrapper" role="button">Restart</a>
+                </td>
             </tr>
         }
 
