--- a/src/MyRouteTracker.Web/Views/_ViewImports.cshtml
+++ b/src/MyRouteTracker.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using MyRouteTracker.Web
 @using MyRouteTracker.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Htmx.TagHelpers
