Initial implementation of data point injestion

--- a/src/MyRouteTracker.Web/Views/Shared/_Layout.cshtml
+++ b/src/MyRouteTracker.Web/Views/Shared/_Layout.cshtml
@@ -46,12 +46,13 @@
             &copy; 2024 - MyRouteTracker.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/htmx/htmx.min.js"></script>
+    <script src="~/lib/cash/cash.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/injester.js" asp-append-version="true"></script>
     <script>
-        htmx.logAll();
+        //htmx.logAll();
         let ingesterUrl = '@Url.Content("~/api/ingest")';
     </script>
     @await RenderSectionAsync("Scripts", required: false)
