--- a/src/MyRouteTracker.Web/Views/TrackerView/_TrackerCollector.cshtml
+++ b/src/MyRouteTracker.Web/Views/TrackerView/_TrackerCollector.cshtml
@@ -1,23 +1,35 @@
 @model RouteDataSetViewModel
 
-<div class="container shadow-sm p-2 bg-body-tertiary rounded">
+<div class="container shadow-sm p-2 bg-body-tertiary rounded" id="collector-container"
+    data-userId="@Model.UserProfileId" data-routeId="@Model.Id">
     <div class="row">
         <div class="col">
             [@Model.Name]
         </div>
         <div class="col">
-            heading
+            <span id="heading"></span>
         </div>
         <div class="col-3 col-sm-2 text-center">
-            <a class="btn btn-primary d-none" role="button" href="#">
+            <button class="btn btn-primary" role="button" id="collect-pause">
                 <i class="bi bi-pause"></i><span class="d-none d-sm-inline">Pause</span>
-            </a>
-            <a class="btn btn-primary" role="button" href="#">
+            </button>
+            <a class="btn btn-primary d-none" role="button" id="collect-resume">
                 <i class="bi bi-play-fill"></i> <span class="d-none d-sm-inline">Resume</span>
             </a>
-            <button class="btn btn-light">
+            <button class="btn btn-light" id="collect-finish">
                 <i class="bi bi-x-lg"></i> <span class="d-none d-sm-inline">Finish</span>
             </button>
         </div>
     </div>
 </div>
+<script>
+    (function () {
+        let instance = GeoLocationSensor.getInstance();
+        if (instance.enabled) {
+            instance.stop();
+        } else {
+            console.log('Instance not running');
+            instance = GeoLocationSensor.start('@Model.UserProfileId', '@Model.Id');
+        }
+    })();
+</script>
