--- a/src/MyRouteTracker.Web/Views/Shared/_Layout.cshtml
+++ b/src/MyRouteTracker.Web/Views/Shared/_Layout.cshtml
@@ -4,11 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MyRouteTracker.Web</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
-    <link rel="stylesheet" href="~/MyRouteTracker.Web.styles.css" asp-append-version="true">
+    <title>@ViewData["Title"] - My Route Tracker</title>
+    <link rel="stylesheet" href="~/dist/index.css" asp-append-version="true">
 </head>
 
 <body>
@@ -46,11 +43,7 @@
             &copy; 2024 - MyRouteTracker.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/htmx/htmx.min.js"></script>
-    <script src="~/lib/cash/cash.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/injester.js" asp-append-version="true"></script>
+    <script src="~/dist/index.js"></script>
     <script>
         //htmx.logAll();
         let clientId = '@System.Guid.NewGuid()'
