Integrating  data access with authenticated user

--- a/src/MyRouteTracker.Web/Views/Shared/_Layout.cshtml
+++ b/src/MyRouteTracker.Web/Views/Shared/_Layout.cshtml
@@ -13,27 +13,8 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">My Route Tracker</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Tracker" asp-action="List">Tracker Routes</a>
-                        </li>
-                    </ul>
-                </div>
-                @if (User.Identity?.IsAuthenticated ?? false)
-                {
-                    <div class="d-flex">
-                        <i class="bi bi-person-circle me-3 mt-1"><span class="lead ms-1">@User.Identity.Name</span>
-                        </i><a asp-route="logout" class="btn btn-light">Logout</a>
-                    </div>
-                }
+
+                <partial name="_UserProfile" />
             </div>
         </nav>
     </header>
