--- a/src/MyRouteTracker.Web/Views/TrackerView/_TrackerCollector.cshtml
+++ b/src/MyRouteTracker.Web/Views/TrackerView/_TrackerCollector.cshtml
@@ -34,5 +34,5 @@
     </div>
 </div>
 <script>
-    htmx.trigger("body", "init.collector", { userId: '@Model.UserProfileId', routeId: '@Model.Id' });
+    htmx.trigger("body", "init.collector", { routeId: '@Model.Id' });
 </script>
