Fixing post login redirection.

--- a/src/MyRouteTracker.Web/Views/Shared/_UserProfile.cshtml
+++ b/src/MyRouteTracker.Web/Views/Shared/_UserProfile.cshtml
@@ -37,6 +37,6 @@
 else
 {
     <div class="float-end">
-        <a class="btn btn-outline-secondary" asp-route="Login">Login</a>
+        <a class="btn btn-outline-secondary" asp-route="Login" asp-route-returnUrl="@Url.Content("~/")">Login</a>
     </div>
 }
