--- a/src/MyRouteTracker.Web/Views/Tracker/List.cshtml
+++ b/src/MyRouteTracker.Web/Views/Tracker/List.cshtml
@@ -6,6 +6,7 @@
     <h1 class="display-6">Captured Routes</h1>
 </div>
 <div>
+    <partial name="_GeolocationPermission" />
     <a class="btn btn-primary" role="button" hx-get hx-controller="TrackerView" hx-action="Start"
         hx-target="#collector-wrapper">
         Start route <i class="bi bi-arrow-right-circle"></i>
