--- a/src/MyRouteTracker.Web/Views/TrackerView/_TrackerCollector.cshtml
+++ b/src/MyRouteTracker.Web/Views/TrackerView/_TrackerCollector.cshtml
@@ -20,13 +20,13 @@
         <div class="col">
             <span id="heading"></span>
         </div>
-        <div class="col-3 col-sm-2 text-center">
+        <div class="col-md-3 col-sm-2 text-center justify-content-end">
             <button class="btn btn-primary" role="button" id="collect-pause">
                 <i class="bi bi-pause"></i><span class="d-none d-sm-inline">Pause</span>
             </button>
-            <a class="btn btn-primary d-none" role="button" id="collect-resume">
+            <button class="btn btn-primary d-none" role="button" id="collect-resume">
                 <i class="bi bi-play-fill"></i> <span class="d-none d-sm-inline">Resume</span>
-            </a>
+            </button>
             <button class="btn btn-light" id="collect-finish">
                 <i class="bi bi-x-lg"></i> <span class="d-none d-sm-inline">Finish</span>
             </button>
