--- a/src/MyRouteTracker.Web/Views/Shared/_Layout.cshtml
+++ b/src/MyRouteTracker.Web/Views/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
             @RenderBody()
         </main>
     </div>
-    <div class="fixed-bottom mb-5" id="collector-wrapper">
+    <div class="fixed-bottom mb-5 pb-2" id="collector-wrapper">
 
     </div>
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted fixed-bottom py-3">
         <div class="container">
             &copy; 2024 - MyRouteTracker.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
