--- a/src/MyRouteTracker.Web/Views/Shared/_UserProfile.cshtml
+++ b/src/MyRouteTracker.Web/Views/Shared/_UserProfile.cshtml
@@ -21,7 +21,10 @@
                     </p>
                 </li>
                 <li>
-                    <a class="dropdown-item text-center text-dark" asp-controller="Tracker" asp-action="List">Tracker
+                    <hr class="dropdown-divider">
+                </li>
+                <li>
+                    <a class="dropdown-item text-center" asp-controller="Tracker" asp-action="List">Tracker
                         Routes</a>
                 </li>
                 <li>
